fix: increase contrast between link and text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,8 @@
   --light-color: #e1e1e1;
   --dark-color: #c6c6c6;
   --text-color: #292929;
-  --link-color: #1d3ecf;
-  --link-hover-color: #1432ad;
+  --link-color: #4c75ff;
+  --link-hover-color: #3b63fb;
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback;
